# fit_sensex

./: .env.example  .gitignore  README.md  WORKFLOW.md  credentials.example.ini  hols.xlsx  portfolio.example.csv  portfolio_nifty.csv  portfolio_nifty_trades.csv  portfolio_sensex.csv  portfolio_sensex_trades.csv  pyproject.toml
src/fit_sensex/: __init__.py  __main__.py  config.py  main.py  models.py
src/fit_sensex/market/: __init__.py  instruments.py  kite_stream.py
src/fit_sensex/pricing/: __init__.py  black_scholes.py  vol_curve.py
src/fit_sensex/services/: analytics.py  expiry_calendar.py  risk.py
src/fit_sensex/ui/: __init__.py  app.py
