[project]
name = "fit-sensex"
version = "0.1.0"
description = "Live SENSEX option-chain IV fitting dashboard"
requires-python = ">=3.11"
dependencies = [
    "kiteconnect",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
]

[project.scripts]
fit-sensex = "fit_sensex.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
